--- a/inSooqApp/Controllers/AccountControllers/AdsControllers/EditAdController/MyAdsMotorsTableViewCell.xib
+++ b/inSooqApp/Controllers/AccountControllers/AdsControllers/EditAdController/MyAdsMotorsTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -24,7 +24,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4tO-vb-FFJ">
                                 <rect key="frame" x="0.0" y="0.0" width="120" height="150"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1cm-L6-XPj">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -33,22 +33,22 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="7r6-p5-Jc0">
-                                <rect key="frame" x="-1.5" y="122" width="123" height="28"/>
+                                <rect key="frame" x="-1.5" y="124" width="123" height="26"/>
                             </pageControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audi S5 2017, Full Agency Service" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-jd-lIH">
-                                <rect key="frame" x="128" y="25" width="133" height="36"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-jd-lIH">
+                                <rect key="frame" x="128" y="25" width="9" height="18"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AED 2,000,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDH-v3-llK">
-                                <rect key="frame" x="128" y="71" width="112" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AED _" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDH-v3-llK">
+                                <rect key="frame" x="128" y="63" width="44" height="18"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="textColor" name="labelYelloBackground"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Live Ad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uX-2E-Ov5">
-                                <rect key="frame" x="138" y="5" width="51.5" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uX-2E-Ov5">
+                                <rect key="frame" x="138" y="5" width="8.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="systemGreenColor"/>
                                 <nil key="highlightedColor"/>
@@ -70,7 +70,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mqc-E5-r1V">
-                                <rect key="frame" x="128" y="95.5" width="15" height="11.5"/>
+                                <rect key="frame" x="128" y="87.5" width="15" height="11.5"/>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="42T-4U-utB"/>
@@ -78,7 +78,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeO-ni-u6a">
-                                <rect key="frame" x="128" y="116" width="112" height="26"/>
+                                <rect key="frame" x="128" y="116" width="120" height="26"/>
                                 <color key="backgroundColor" red="0.3411764706" green="0.27450980390000002" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <state key="normal" title="Get more Views">
@@ -90,35 +90,44 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="408 Views" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpN-9E-JmT">
-                                <rect key="frame" x="148" y="93" width="68.5" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 Views" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpN-9E-JmT">
+                                <rect key="frame" x="148" y="85" width="51" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZeO-zZ-onS">
+                                <rect key="frame" x="128" y="45" width="9" height="18"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="YDH-v3-llK" firstAttribute="leading" secondItem="ZeO-zZ-onS" secondAttribute="leading" id="2ab-FL-WRe"/>
                             <constraint firstItem="1uX-2E-Ov5" firstAttribute="leading" secondItem="7Lq-el-SNp" secondAttribute="trailing" constant="5" id="7lB-Th-DCM"/>
+                            <constraint firstItem="YDH-v3-llK" firstAttribute="top" secondItem="ZeO-zZ-onS" secondAttribute="bottom" id="7uQ-Nw-7fp"/>
                             <constraint firstItem="4tO-vb-FFJ" firstAttribute="width" secondItem="AUe-m8-unN" secondAttribute="width" multiplier="0.4" id="8mV-be-EMD"/>
                             <constraint firstItem="dpN-9E-JmT" firstAttribute="centerY" secondItem="mqc-E5-r1V" secondAttribute="centerY" id="Ate-G6-NBD"/>
+                            <constraint firstItem="ZeO-zZ-onS" firstAttribute="leading" secondItem="KTD-jd-lIH" secondAttribute="leading" id="Ats-eI-77J"/>
                             <constraint firstItem="YDH-v3-llK" firstAttribute="width" relation="lessThanOrEqual" secondItem="AUe-m8-unN" secondAttribute="width" multiplier="0.6" id="DHa-J6-MqE"/>
-                            <constraint firstItem="YDH-v3-llK" firstAttribute="top" secondItem="KTD-jd-lIH" secondAttribute="bottom" constant="10" id="Jcg-9a-BOt"/>
                             <constraint firstItem="KTD-jd-lIH" firstAttribute="leading" secondItem="4tO-vb-FFJ" secondAttribute="trailing" constant="8" id="JpW-7T-CeQ"/>
                             <constraint firstItem="KTD-jd-lIH" firstAttribute="top" secondItem="4tO-vb-FFJ" secondAttribute="top" constant="25" id="Jvf-zP-GCk"/>
                             <constraint firstItem="7r6-p5-Jc0" firstAttribute="bottom" secondItem="4tO-vb-FFJ" secondAttribute="bottom" id="MZg-r6-vYX"/>
                             <constraint firstItem="qeO-ni-u6a" firstAttribute="leading" secondItem="mqc-E5-r1V" secondAttribute="leading" id="QXX-ZW-bIc"/>
+                            <constraint firstItem="ZeO-zZ-onS" firstAttribute="top" secondItem="KTD-jd-lIH" secondAttribute="bottom" constant="2" id="RJ7-rJ-c07"/>
                             <constraint firstItem="KTD-jd-lIH" firstAttribute="width" relation="lessThanOrEqual" secondItem="AUe-m8-unN" secondAttribute="width" multiplier="0.5" id="UTr-vL-XSJ"/>
                             <constraint firstItem="KTD-jd-lIH" firstAttribute="height" relation="lessThanOrEqual" secondItem="AUe-m8-unN" secondAttribute="height" multiplier="0.7" id="Ubb-gJ-Zyv"/>
                             <constraint firstItem="1uX-2E-Ov5" firstAttribute="top" secondItem="4tO-vb-FFJ" secondAttribute="top" constant="5" id="WNA-UL-HMv"/>
                             <constraint firstAttribute="bottom" secondItem="4tO-vb-FFJ" secondAttribute="bottom" id="Xpy-nA-Kxm"/>
-                            <constraint firstItem="qeO-ni-u6a" firstAttribute="trailing" secondItem="YDH-v3-llK" secondAttribute="trailing" id="XxF-jy-vsZ"/>
                             <constraint firstItem="mqc-E5-r1V" firstAttribute="top" secondItem="YDH-v3-llK" secondAttribute="bottom" constant="5" id="add-HX-Hjp"/>
                             <constraint firstItem="YDH-v3-llK" firstAttribute="leading" secondItem="KTD-jd-lIH" secondAttribute="leading" id="agk-eo-3j4"/>
                             <constraint firstItem="4tO-vb-FFJ" firstAttribute="leading" secondItem="AUe-m8-unN" secondAttribute="leading" id="eP5-YA-37h"/>
                             <constraint firstItem="7Lq-el-SNp" firstAttribute="centerY" secondItem="1uX-2E-Ov5" secondAttribute="centerY" id="g82-YJ-Dx6"/>
                             <constraint firstAttribute="bottom" secondItem="qeO-ni-u6a" secondAttribute="bottom" constant="8" id="hSx-ZM-uds"/>
                             <constraint firstItem="dpN-9E-JmT" firstAttribute="leading" secondItem="mqc-E5-r1V" secondAttribute="trailing" constant="5" id="lTB-IP-XAo"/>
+                            <constraint firstAttribute="trailing" secondItem="qeO-ni-u6a" secondAttribute="trailing" constant="52" id="owU-xV-BBX"/>
                             <constraint firstItem="7r6-p5-Jc0" firstAttribute="width" secondItem="4tO-vb-FFJ" secondAttribute="width" multiplier="1.025" id="ru2-QY-TIy"/>
                             <constraint firstItem="7r6-p5-Jc0" firstAttribute="centerX" secondItem="4tO-vb-FFJ" secondAttribute="centerX" id="u9r-LW-MQt"/>
                             <constraint firstItem="7Lq-el-SNp" firstAttribute="leading" secondItem="KTD-jd-lIH" secondAttribute="leading" id="xtf-Kr-1gR"/>
@@ -142,6 +151,7 @@
                 <outlet property="imagesPageController" destination="7r6-p5-Jc0" id="f8B-wX-oUP"/>
                 <outlet property="isLiveLabel" destination="1uX-2E-Ov5" id="GdY-Sz-X3n"/>
                 <outlet property="mainView" destination="AUe-m8-unN" id="LH1-2e-FIR"/>
+                <outlet property="serviceLocationLabel" destination="ZeO-zZ-onS" id="rop-C6-tMY"/>
                 <outlet property="servicePrice" destination="YDH-v3-llK" id="IbW-qY-EnQ"/>
                 <outlet property="serviceTitle" destination="KTD-jd-lIH" id="Uxo-B3-OTm"/>
                 <outlet property="viewsLabel" destination="dpN-9E-JmT" id="h9J-4g-keA"/>
